[gd_scene load_steps=9 format=3 uid="uid://dglk165fs34w3"]

[ext_resource type="Texture2D" uid="uid://buyvrmkgmcryd" path="res://Scenes/Menus/FinalBackground.png" id="1_fhm6o"]
[ext_resource type="Script" path="res://Scenes/Menus/MainMenuTest.gd" id="1_nh1kk"]
[ext_resource type="FontFile" uid="uid://cf655hkwqrqyc" path="res://Assets/Font/PixelSerif_16px_v02.otf" id="2_jk7vb"]
[ext_resource type="Theme" uid="uid://yk36rhjn0d1b" path="res://Themes/MenuButtons.tres" id="4_d87gk"]
[ext_resource type="Theme" uid="uid://ceo5ni24hu6cy" path="res://Themes/PlayButton.tres" id="4_lra2w"]
[ext_resource type="Texture2D" uid="uid://cjpi6ntn20qv" path="res://Assets/GUI/FinalGUIAssets/Separator.png" id="6_tandm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l18gw"]
texture = ExtResource("6_tandm")
region_rect = Rect2(915, 238, 80, 740)

[sub_resource type="Theme" id="Theme_d57r2"]
PanelContainer/styles/panel = SubResource("StyleBoxTexture_l18gw")

[node name="MainMenuTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nh1kk")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_fhm6o")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2

[node name="ChangeKeybindsButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme = ExtResource("4_d87gk")
theme_override_fonts/font = ExtResource("2_jk7vb")
theme_override_font_sizes/font_size = 40
text = "Keybinds"

[node name="Separator2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1220, 50)
layout_mode = 2

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme = ExtResource("4_d87gk")
theme_override_fonts/font = ExtResource("2_jk7vb")
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="Separator3" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 20)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 15
theme_override_constants/shadow_offset_y = 15
theme_override_constants/outline_size = 24
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("2_jk7vb")
theme_override_font_sizes/font_size = 135
text = "BOMBERMAN
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_d57r2")
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
texture = ExtResource("6_tandm")

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(450, 180)
layout_mode = 2
theme = ExtResource("4_lra2w")
theme_override_fonts/font = ExtResource("2_jk7vb")
theme_override_font_sizes/font_size = 80
text = "Play"

[node name="Separator4" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme = ExtResource("4_d87gk")
theme_override_fonts/font = ExtResource("2_jk7vb")
theme_override_font_sizes/font_size = 40
text = "Credits"

[node name="Separator2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(1220, 50)
layout_mode = 2

[node name="InfoButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme = ExtResource("4_d87gk")
theme_override_fonts/font = ExtResource("2_jk7vb")
theme_override_font_sizes/font_size = 40
text = "Info"
